Added http module and httpExample, added jest and a test for validate
